--- a/Household_services_App_22dp1000004/frontend/package.json
+++ b/Household_services_App_22dp1000004/frontend/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "ejs": "^3.1.10",
     "html-webpack-plugin": "^5.6.3",
+    "jwt-decode": "^4.0.0",
     "loader-utils": "^3.3.1",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
