--- a/Household_services_App_22dp1000004/frontend/package.json
+++ b/Household_services_App_22dp1000004/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
     "ejs": "^3.1.10",
     "html-webpack-plugin": "^5.6.3",
@@ -24,8 +25,8 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
