--- a/Household_services_App_22dp1000004/frontend/package.json
+++ b/Household_services_App_22dp1000004/frontend/package.json
@@ -50,5 +50,11 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "description": "``` npm install ```",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
